--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,16 @@
 	<artifactId>tienda</artifactId>
 	<version>1</version>
 	<name>tienda</name>
-	<description>Proyecto Tienda</description>
+	<description>Proyecto hecho en clase de Web y Patrones</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+                <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <scope> runtime </scope>
+                </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -25,7 +30,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -42,6 +46,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-data-jpa</artifactId>
+                        <version>2.6.3</version>
+                        <type>module</type>
+                </dependency>
 	</dependencies>
 
 	<build>
